# wut_rust

./: .SRCINFO  .gitignore  AGENT.md  Cargo.toml  OpenCode.md  PKGBUILD  README.md  demo.js  example_config.json  prompt.go  prompt.java
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
pkg/huh/: .BUILDINFO  .MTREE  .PKGINFO
pkg/huh-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: config.rs  config.rs.backup  constants.rs  gemini.rs  history.rs  main.rs  prompt.rs  shell.rs  shell_detection.rs
