[package]
name = "huh"
version = "0.1.3"
edition = "2021"
description = "A CLI tool that provides AI-powered analysis and suggestions for your shell commands."
license = "MIT"
readme = "README.md"
authors = ["Suraj Singh <surajssc1232@gmail.com>"]
homepage = "https://github.com/surajssc1232/wut_rust"
exclude = ["pkg/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
